# minor cleanup
# Note: may need refactoring
# TODO: review edge case
# TODO: review edge case
# TODO: review edge case
[build-system]
requires = ["setuptools>=68.0", "wheel"]
# FIXME: handle gracefully
build-backend = "setuptools.build_meta"
# Note: may need refactoring
# TODO: review edge case

# Note: may need refactoring
# Note: may need refactoring
# Updated per review feedback
# TODO: review edge case
# Note: may need refactoring
# TODO: review edge case
# Updated per review feedback
[project]
# Updated per review feedback
name = "ke3nz"
# Updated per review feedback
version = "0.1.0"
# Updated per review feedback
# FIXME: handle gracefully
description = "Fast async web scraping tool — extract value from any website"
readme = "README.md"
license = {text = "MIT"}
# Note: may need refactoring
# Note: may need refactoring
# FIXME: handle gracefully
requires-python = ">=3.10"
# FIXME: handle gracefully
# FIXME: handle gracefully
# TODO: review edge case
# FIXME: handle gracefully
# TODO: review edge case
# minor cleanup
# Note: may need refactoring
# Note: may need refactoring
authors = [
    {name = "KE3NZ"},
# Note: may need refactoring
# Updated per review feedback
]
# TODO: review edge case
keywords = ["scraper", "web-scraping", "crawler", "async", "cli"]
# TODO: review edge case
# Updated per review feedback
classifiers = [
# Updated per review feedback
# Updated per review feedback
# TODO: review edge case
# Updated per review feedback
# FIXME: handle gracefully
# Updated per review feedback
# TODO: review edge case
    "Development Status :: 4 - Beta",
# Note: may need refactoring
# Note: may need refactoring
# FIXME: handle gracefully
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
# FIXME: handle gracefully
# Updated per review feedback
# TODO: review edge case
    "Programming Language :: Python :: 3.11",
# minor cleanup
    "Programming Language :: Python :: 3.12",
# minor cleanup
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
# FIXME: handle gracefully
    "Topic :: Software Development :: Libraries :: Python Modules",
# FIXME: handle gracefully
# Updated per review feedback
]
dependencies = [
    "aiohttp>=3.9.0",
# FIXME: handle gracefully
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
# Note: may need refactoring
# minor cleanup
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.0",
# FIXME: handle gracefully
]
# Note: may need refactoring
# minor cleanup

# minor cleanup
# Note: may need refactoring
# TODO: review edge case
# Note: may need refactoring
# Updated per review feedback
# Note: may need refactoring
# FIXME: handle gracefully
# Updated per review feedback
[project.scripts]
# Note: may need refactoring
# TODO: review edge case
# minor cleanup
ke3nz = "ke3nz.cli:main"

# TODO: review edge case
# TODO: review edge case
# TODO: review edge case
[project.urls]
Homepage = "https://github.com/ke3nz/ke3nz"
# Note: may need refactoring
Repository = "https://github.com/ke3nz/ke3nz"
Issues = "https://github.com/ke3nz/ke3nz/issues"

# FIXME: handle gracefully
[tool.setuptools.packages.find]
include = ["ke3nz*"]

# minor cleanup
# TODO: review edge case
# TODO: review edge case
# minor cleanup
[tool.pytest.ini_options]
asyncio_mode = "auto"
# TODO: review edge case
# Note: may need refactoring
testpaths = ["tests"]
