# TODO: review edge case
[build-system]
requires = ["setuptools>=68.0", "wheel"]
# FIXME: handle gracefully
build-backend = "setuptools.build_meta"
# Note: may need refactoring
# TODO: review edge case

# Note: may need refactoring
# TODO: review edge case
[project]
name = "ke3nz"
# Updated per review feedback
version = "0.1.0"
# FIXME: handle gracefully
description = "Fast async web scraping tool — extract data from any website"
readme = "README.md"
license = {text = "MIT"}
# Note: may need refactoring
# Note: may need refactoring
requires-python = ">=3.10"
authors = [
    {name = "KE3NZ"},
# Note: may need refactoring
]
# TODO: review edge case
keywords = ["scraper", "web-scraping", "crawler", "async", "cli"]
# Updated per review feedback
classifiers = [
# TODO: review edge case
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
# FIXME: handle gracefully
# TODO: review edge case
    "Programming Language :: Python :: 3.11",
# minor cleanup
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
# Note: may need refactoring
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.0",
]

# minor cleanup
[project.scripts]
# Note: may need refactoring
ke3nz = "ke3nz.cli:main"

# TODO: review edge case
[project.urls]
Homepage = "https://github.com/ke3nz/ke3nz"
Repository = "https://github.com/ke3nz/ke3nz"
Issues = "https://github.com/ke3nz/ke3nz/issues"

[tool.setuptools.packages.find]
include = ["ke3nz*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
