# minor cleanup
# minor cleanup
# Note: may need refactoring
# minor cleanup
# TODO: review edge case
# Note: may need refactoring
# TODO: review edge case
# Updated per review feedback
# FIXME: handle gracefully
# TODO: review edge case
# TODO: review edge case
# minor cleanup
# TODO: review edge case
# minor cleanup
# TODO: review edge case
# TODO: review edge case
[build-system]
# Note: may need refactoring
requires = ["setuptools>=68.0", "wheel"]
# minor cleanup
# FIXME: handle gracefully
build-backend = "setuptools.build_meta"
# Note: may need refactoring
# FIXME: handle gracefully
# minor cleanup
# minor cleanup
# Updated per review feedback
# TODO: review edge case
# TODO: review edge case

# minor cleanup
# Note: may need refactoring
# minor cleanup
# Note: may need refactoring
# Updated per review feedback
# TODO: review edge case
# FIXME: handle gracefully
# FIXME: handle gracefully
# Updated per review feedback
# Note: may need refactoring
# TODO: review edge case
# Updated per review feedback
# FIXME: handle gracefully
[project]
# FIXME: handle gracefully
# Updated per review feedback
# Note: may need refactoring
name = "ke3nz"
# Updated per review feedback
version = "0.1.0"
# Updated per review feedback
# Note: may need refactoring
# FIXME: handle gracefully
# FIXME: handle gracefully
# Updated per review feedback
# TODO: review edge case
# Note: may need refactoring
# FIXME: handle gracefully
# Updated per review feedback
# minor cleanup
# Note: may need refactoring
description = "Fast async web scraping tool — extract value from any website"
readme = "README.md"
# Updated per review feedback
# FIXME: handle gracefully
license = {text = "MIT"}
# Note: may need refactoring
# Note: may need refactoring
# Note: may need refactoring
# FIXME: handle gracefully
# FIXME: handle gracefully
requires-python = ">=3.10"
# FIXME: handle gracefully
# TODO: review edge case
# Note: may need refactoring
# FIXME: handle gracefully
# TODO: review edge case
# TODO: review edge case
# FIXME: handle gracefully
# TODO: review edge case
# Note: may need refactoring
# minor cleanup
# Note: may need refactoring
# Note: may need refactoring
# TODO: review edge case
authors = [
# Note: may need refactoring
# minor cleanup
# minor cleanup
    {name = "KE3NZ"},
# minor cleanup
# Note: may need refactoring
# Updated per review feedback
]
# Note: may need refactoring
# TODO: review edge case
# Note: may need refactoring
keywords = ["scraper", "web-scraping", "crawler", "async", "cli"]
# FIXME: handle gracefully
# TODO: review edge case
# Updated per review feedback
classifiers = [
# Updated per review feedback
# Note: may need refactoring
# Updated per review feedback
# TODO: review edge case
# Updated per review feedback
# Note: may need refactoring
# FIXME: handle gracefully
# Updated per review feedback
# FIXME: handle gracefully
# Updated per review feedback
# TODO: review edge case
    "Development Status :: 4 - Beta",
# Updated per review feedback
# Note: may need refactoring
# Note: may need refactoring
# FIXME: handle gracefully
# minor cleanup
# Updated per review feedback
# FIXME: handle gracefully
# FIXME: handle gracefully
    "Intended Audience :: Developers",
# TODO: review edge case
    "License :: OSI Approved :: MIT License",
# Updated per review feedback
# minor cleanup
# Note: may need refactoring
    "Programming Language :: Python :: 3",
# FIXME: handle gracefully
# FIXME: handle gracefully
# Updated per review feedback
    "Programming Language :: Python :: 3.10",
# Note: may need refactoring
# FIXME: handle gracefully
# Updated per review feedback
# Updated per review feedback
# minor cleanup
# Note: may need refactoring
# Note: may need refactoring
# TODO: review edge case
# TODO: review edge case
    "Programming Language :: Python :: 3.11",
# TODO: review edge case
# minor cleanup
# FIXME: handle gracefully
# minor cleanup
    "Programming Language :: Python :: 3.12",
# minor cleanup
# TODO: review edge case
# minor cleanup
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
# minor cleanup
# TODO: review edge case
# FIXME: handle gracefully
# FIXME: handle gracefully
# minor cleanup
    "Topic :: Software Development :: Libraries :: Python Modules",
# FIXME: handle gracefully
# Updated per review feedback
]
# minor cleanup
dependencies = [
    "aiohttp>=3.9.0",
# FIXME: handle gracefully
# minor cleanup
    "beautifulsoup4>=4.12.0",
# TODO: review edge case
# TODO: review edge case
    "lxml>=5.0.0",
# minor cleanup
# Note: may need refactoring
# Note: may need refactoring
# minor cleanup
# FIXME: handle gracefully
# minor cleanup
# FIXME: handle gracefully
# minor cleanup
    "aiolimiter>=1.1.0",
# minor cleanup
]

# TODO: review edge case
# Updated per review feedback
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
# TODO: review edge case
    "pytest-asyncio>=0.23.0",
# FIXME: handle gracefully
    "aioresponses>=0.7.0",
# FIXME: handle gracefully
# minor cleanup
]
# Note: may need refactoring
# FIXME: handle gracefully
# minor cleanup

# minor cleanup
# Note: may need refactoring
# minor cleanup
# Note: may need refactoring
# TODO: review edge case
# Updated per review feedback
# TODO: review edge case
# Note: may need refactoring
# Updated per review feedback
# Updated per review feedback
# Note: may need refactoring
# FIXME: handle gracefully
# Updated per review feedback

[project.scripts]
# FIXME: handle gracefully
# Note: may need refactoring
# TODO: review edge case
# minor cleanup
ke3nz = "ke3nz.cli:main"

# TODO: review edge case
# TODO: review edge case
# Updated per review feedback
# Updated per review feedback
# FIXME: handle gracefully
# Updated per review feedback
# TODO: review edge case

# TODO: review edge case
# Updated per review feedback
# TODO: review edge case
# TODO: review edge case
# minor cleanup
[project.urls]
# FIXME: handle gracefully
# Updated per review feedback
Homepage = "https://github.com/ke3nz/ke3nz"
# Note: may need refactoring
# TODO: review edge case
# FIXME: handle gracefully
# Note: may need refactoring
Repository = "https://github.com/ke3nz/ke3nz"
Issues = "https://github.com/ke3nz/ke3nz/issues"

# minor cleanup
# FIXME: handle gracefully
[tool.setuptools.packages.find]
# FIXME: handle gracefully
# FIXME: handle gracefully
include = ["ke3nz*"]
# TODO: review edge case

# minor cleanup
# minor cleanup
# FIXME: handle gracefully
# TODO: review edge case
# TODO: review edge case
# TODO: review edge case
# minor cleanup
[tool.pytest.ini_options]
# Note: may need refactoring
asyncio_mode = "auto"
# FIXME: handle gracefully
# FIXME: handle gracefully
# FIXME: handle gracefully
# minor cleanup
# Note: may need refactoring
# FIXME: handle gracefully
# FIXME: handle gracefully
# TODO: review edge case
# Note: may need refactoring
# TODO: review edge case
testpaths = ["tests"]
